unpackaged/main/default/objects/Acquiring_Fees_Lookup__mdt/Acquiring_Fees_Lookup__mdt.object-meta.xml
<CustomObject>
    <description>Acquiring Fees - Davinder/Eoin</description>
    <label>Acquiring Fees Lookup</label>
    <pluralLabel>Acquiring Fees Lookup</pluralLabel>
</CustomObject>