unpackaged/main/default/objects/Acquiring_Fees_Lookup__mdt/fields/Max_Vol__c.field-meta.xml
<CustomField>
    <fullName>Max_Vol__c</fullName>
    <label>Max Vol</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>