unpackaged/main/default/objects/Acquiring_Fees_Lookup__mdt/fields/Min_Fees__c.field-meta.xml
<CustomField>
    <fullName>Min_Fees__c</fullName>
    <label>Min Fees</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>