unpackaged/main/default/objects/Acquiring_Fees_Lookup__mdt/fields/Min_Vol__c.field-meta.xml
<CustomField>
    <fullName>Min_Vol__c</fullName>
    <label>Min Vol</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>