unpackaged/main/default/objects/Acquiring_Fees_Lookup__mdt/fields/Minumum_Fees__c.field-meta.xml
<CustomField>
    <fullName>Minumum_Fees__c</fullName>
    <label>Minumum Fees</label>
    <length>100</length>
    <type>Text</type>
</CustomField>