unpackaged/main/default/objects/Acquiring_Fees_Lookup__mdt/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POS/Online PBL</fullName>
                <default>true</default>
                <label>POS/Online PBL</label>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>Online PBL</fullName>
            </value>
            <value>
                <fullName>Online Cybersource</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>