unpackaged/main/default/objects/Acquiring_Fees_Lookup__mdt/fields/Scheme__c.field-meta.xml
<CustomField>
    <fullName>Scheme__c</fullName>
    <label>Scheme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visa/Mastercard</fullName>
                <default>true</default>
                <label>Visa/Mastercard</label>
            </value>
            <value>
                <fullName>Union Pay</fullName>
            </value>
            <value>
                <fullName>Amex</fullName>
            </value>
            <value>
                <fullName>Alipay</fullName>
            </value>
            <value>
                <fullName>WeChat</fullName>
            </value>
            <value>
                <fullName>Alipay/WeChat</fullName>
                <isActive>false</isActive>
                <label>Alipay/WeChat</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>