unpackaged/main/default/objects/Acquiring_Fees_Lookup__mdt/fields/Scheme_Fees__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Fees__c</fullName>
    <label>Scheme Fees</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>