unpackaged/main/default/objects/Acquiring_Fees_Lookup__mdt/fields/Setup__c.field-meta.xml
<CustomField>
    <fullName>Setup__c</fullName>
    <label>Setup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stand Alone</fullName>
                <default>true</default>
                <label>Stand Alone</label>
            </value>
            <value>
                <fullName>Integrated</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>