unpackaged/main/default/objects/Acquiring_Fees_Lookup__mdt/fields/Transaction_Fee__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Fee__c</fullName>
    <label>Transaction Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>