unpackaged/main/default/objects/Acquiring_Fees_Lookup__mdt/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <label>Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hospitality</fullName>
                <default>true</default>
                <label>Hospitality</label>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Retail/Hospitality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>