unpackaged/main/default/objects/Acquiring_Fees_Lookup__mdt/listViews/Fees.listView-meta.xml
<ListView>
    <fullName>Fees</fullName>
    <columns>DeveloperName</columns>
    <columns>Vertical__c</columns>
    <columns>Setup__c</columns>
    <columns>Platform__c</columns>
    <columns>Scheme__c</columns>
    <columns>Min_Vol__c</columns>
    <columns>Max_Vol__c</columns>
    <columns>Scheme_Fees__c</columns>
    <columns>Min_Fees__c</columns>
    <columns>Minumum_Fees__c</columns>
    <columns>Transaction_Fee__c</columns>
    <filterScope>Everything</filterScope>
    <label>Fees</label>
    <language>en_US</language>
</ListView>